--- a/src/app/routes/series/series-table/series-table.component.less
+++ b/src/app/routes/series/series-table/series-table.component.less
@@ -5,6 +5,5 @@
   width: 100%;
   padding: 10px 16px;
   text-align: right;
-  background: #fff;
   border-top: 1px solid rgb(232, 232, 232);
 }
